cleanup: consolidate compatibility runtime and test harnesses